--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "convert:webp": "node scripts/convert-to-webp.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -25,9 +26,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "image-webpack-loader": "^8.1.0",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "sharp": "^0.34.4",
     "vue-template-compiler": "^2.6.14"
   }
 }
